Added tsconfig and changed some id

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </select>
         <br>
 
-        <label for="online">Netflix Exclusive?</label>
-        <input type="checkbox" id="online">
+        <label for="netflix">Netflix Exclusive?</label>
+        <input type="checkbox" id="netflix">
         <br>
 
-        <label for="online">Hulu Only?</label>
-        <input type="checkbox" id="online">
+        <label for="hulu">Hulu Only?</label>
+        <input type="checkbox" id="hulu">
         <br>
 
         <label for="online">Other Platform?</label>
