--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product Form</title>
+    <link rel="stylesheet" href="css/site.css"
 </head>
 <body>
 
@@ -46,7 +47,7 @@
         <input type="checkbox" id="online">
         <br>
 
-        <input type="button" value="Add New Movie">
+        <input type="button" value="Add New Movie/Show">
     </form>
 </body>
 </html>
