Implemented MotionPicture class and getMovieShow

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product Form</title>
-    <link rel="stylesheet" href="css/site.css"
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 
-    <h1>Add a Movie / Show</h1>
+    <h1>Add a Motion Picture</h1>
 
     <div id="validation-summary">
         <p>Errors go here...</p>
@@ -35,19 +35,13 @@
         </select>
         <br>
 
-        <label for="netflix">Netflix Exclusive?</label>
-        <input type="checkbox" id="netflix">
-        <br>
-
-        <label for="hulu">Hulu Only?</label>
-        <input type="checkbox" id="hulu">
-        <br>
-
-        <label for="online">Other Platform?</label>
-        <input type="checkbox" id="online">
+        <label for="show">TV Series?</label>
+        <input type="checkbox" id="platform">
         <br>
 
         <input type="button" value="Add New Movie/Show">
     </form>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
