--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <input type="button" value="Add New Movie/Show">
     </form>
 
+    <div id="display">
+
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
